k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-handout-app
spec:
  # Replicas managed by HPA
  selector:
    matchLabels:
      app: k8s-handout
  template:
    metadata:
      labels:
        app: k8s-handout
    spec:
      containers:
      - name: app
        image: node:20-slim
        command: ["sh", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 3000
        # HEALTH CHECKS
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        # RESOURCES (Needed for HPA)
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: code-volume
          mountPath: /src
      - name: git-sync
        image: registry.k8s.io/git-sync/git-sync:v4.2.1
        args:
        - --repo=$(GIT_REPO_URL)
        - --branch=main
        - --wait=60
        - --root=/src
        - --link=code
        volumeMounts:
        - name: code-volume
          mountPath: /src
      volumes:
      - name: code-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-handout-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: k8s-handout
