k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-handout-ingress
  annotations:
    # NGINX Ingress Rate Limiting
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.michelstinkt.win # REPLACE WITH YOUR DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-handout-service
            port:
              number: 80
